	* Changed the search functions column of the default template to adopt styles of the introduction package
	* Added a facet.type default value for use in templates, defaults to "default"
	* Added styling for the facets to blend into introduction package styling
	* Added a class in the relevance bar amrkup to use the theme background color when used in the introduction package

2012-02-13  Ingo Renner  <ingo.renner@dkd.de>

	!!! Removed compatibility for TYPO3 4.3

	* Fixed issue #27578: Remove references to Solr from editor facing UI
	* Added more details when logging page indexing
	* Added log data to page index logging
	* Removed backwardscompatibility for results.highlighting use search.resultsHighlighting instead
	* Added the Index Inspector
	* Fixed an PHP warning due to a missing check whether a given URL parameter is an array when generation a facet reset URL
	* Added a check in the install script whether the download mirror can be contacted
	* Fixed issue #30922: PHP Error in Used Facet Renderer
	* Added tx_solr_Query::setOperator()
	* Added an own implementation for making HTTP requests in tx_solr_indexqueue_PageIndexerRequest to provide better error handling/detection
	* Added method tx_solr_Site::getLanguages()
	* Changed the name of tx_solr_ConnectionManager::getSiteLanguages() to getSystemLanguages()
	* Added an option to override the URL stored in the index for a page
	* Added maxHttpHeaderSize="65536" to server.xml to handle longer GET Request to solr. see also  http://serverfault.com/questions/56691/whats-the-maximum-url-length-in-tomcat
	* Changed text alignment of suggestions so that it is forced to be aligned left

2012-02-10  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #30577: IMAGE and (likely) IMG_RESOURCE do not work in Index Queue mapping, credits Rik Willems

2012-02-02  Ingo Renner  <ingo.renner@dkd.de>

	! Resolved an XSS security issue

	* Updated schema and solrconfig

2012-01-27  Ingo Renner  <ingo.renner@dkd.de>
